spring: dto divida